--- a/scss/_new-features.scss
+++ b/scss/_new-features.scss
@@ -6,7 +6,7 @@
       margin-left: 12px;
     }
     .features-item{
-      margin-left: 68px;
+      margin-left: 5.8%;
       ul{
         padding-left: 30px;
       }
@@ -44,7 +44,7 @@
         width: 470px;
         margin-left: 72px;
         .slider-item {
-          margin-top: 65px;
+          margin-top: 66px;
           display: flex;
           height: 189px;
           background-color: #ffffff;
