--- a/scss/_benefits.scss
+++ b/scss/_benefits.scss
@@ -4,7 +4,7 @@
     h2{
       margin-top: 100px;
       margin-bottom: 58px;
-      padding-left: 20px;
+      padding-left: 1.7%;
       font-family: 'Montserrat', sans-serif;
       font-size: 48px;
       line-height: 1.2;
@@ -32,7 +32,7 @@
         }
       }
       &__item_start {
-        margin-left: 68px;
+        margin-left: 5.78%;
         img {
           margin: 2px 0 0 51px;
         }
